Adición del put para actualizar productos